base working code: RPi Spacebrew server
issues #1-7 identified
this commit runs well with a Spacebrew server on a RPi running Raspbian
+ nginx as web server for Spacebrew admin. Also works well on a test
server on the local machine.

Some connectivity issues exist for off-site servers, these will be
worked on later.

This setup assumes the Spacebrew server running on port 9001 – I’m
running nginx to serve the Spacebrew admin HTML console which proxies
it’s traffic from port 9000 to 9001 internally. Change these settings
to match your setup if needed.

--- a/.gitignore
+++ b/.gitignore
@@ -10,13 +10,9 @@ Thumbs.db
 # Spark core binaries
 *.bin
 
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
-
-# debugging
+# debugging/test code
 serialport*
-
 test.code/*
+
+# RPi backup images
+*.rpi
